--- a/style.css
+++ b/style.css
@@ -37,3 +37,25 @@
 .s7{
   background-color: #ffe6f2;
 }
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.content {
+    flex: 1;
+}
+.footer {
+  padding: 0.7rem;
+  color: rgb(128, 128, 128);
+  font-size: 0.9rem;
+  background-color: #efefef;
+  text-align: center;
+}
+.footer > a {
+  color: rgb(128, 128, 128);
+  font-weight: bold;
+}
