--- a/common.css
+++ b/common.css
@@ -1,34 +1,37 @@
-.jumbotron{
+.jumbotron {
   background-color: #e9ecef !important
 }
 
-h2{
+h2 {
   font-size: 1.2rem;
 }
 
-#table_result{
-  table-layout: fixed;
-  word-wrap: break-word;
+.subject {
+  text-align: center;
 }
 
-.subject{
-  text-align: center;
+.collapsing {
+    -webkit-transition: none;
+    transition: none;
+    display: none;
+}
+
+#table_result {
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 html {
     height: 100%;
 }
-
 body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
 }
-
 .content {
     flex: 1;
 }
-
 .footer {
   padding: 0.7rem;
   color: rgb(128, 128, 128);
@@ -36,7 +39,6 @@ body {
   background-color: #efefef;
   text-align: center;
 }
-
 .footer > a {
   color: rgb(128, 128, 128);
   font-weight: bold;
