--- a/common.css
+++ b/common.css
@@ -1,9 +1,15 @@
-.jumbotron {
-  background-color: #e9ecef !important
+@media screen and (max-width: 767px){
+  h1 {
+    font-size: 1.8rem;
+  }
 }
 
 h2 {
   font-size: 1.2rem;
+}
+
+.jumbotron {
+  background-color: #e9ecef !important
 }
 
 .subject {
