--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@ h2 {
 }
 
 .jumbotron {
-  background-color: #e9ecef !important
+  background-color: #e9ecef !important;
 }
 
 .subject {
@@ -27,22 +27,22 @@ h2 {
   word-wrap: break-word;
 }
 
-html {
-    height: 100%;
+html, body {
+  height: 100%;
 }
 body {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .content {
-    flex: 1;
+  flex: 1 0 auto;
 }
 .footer {
+  flex-shrink: 0;
   padding: 0.7rem;
   color: rgb(128, 128, 128);
   font-size: 0.9rem;
-  background-color: #efefef;
+  background-color: #e9ecef;
   text-align: center;
 }
 .footer > a {
