new feature - indicate whether a subject has a "篩選倍率" by text color

--- a/css/apply.css
+++ b/css/apply.css
@@ -8,30 +8,30 @@
   cursor: pointer;
 }
 
-.s1{
+.standard_1{
   background-color: #ccff99;
 }
 
-.s2{
+.standard_2{
   background-color: #e6ff99;
 }
 
-.s3{
+.standard_3{
   background-color: #ffffb3;
 }
 
-.s4{
+.standard_4{
   background-color: #ffe699;
 }
 
-.s5{
+.standard_5{
   background-color: #ffcc99;
 }
 
-.s6{
+.standard_6{
   background-color: #e6ffff;
 }
 
-.s7{
+.standard_7{
   background-color: #ffe6f2;
 }
