--- a/css/common.css
+++ b/css/common.css
@@ -44,17 +44,17 @@ u.dotted{
 }
 
 html, body {
-  height: 100%;
+  height: 100vh;
 }
 body {
   display: flex;
   flex-direction: column;
 }
 .content {
-  flex: 1 0 auto;
+  flex: auto;
 }
 .footer {
-  flex-shrink: 0;
+  flex: none;
   padding: 0.7rem;
   color: rgb(128, 128, 128);
   font-size: 0.9rem;
